--- a/Calculator/style.css
+++ b/Calculator/style.css
@@ -24,13 +24,13 @@ body {
     border: 2px solid rgb(136, 2, 254);
     position: relative;
     margin: auto;
-    margin-top: 110px;
+    margin-top: 80px;
     width: fit-content;
     height: 480px;
     max-width: 500px;
     max-height: 540px;
-    padding: 10px;
-    border-radius: 14px;
+    padding: 5px;
+    border-radius: 13px;
     -webkit-box-shadow: 1px 1px 4px 0px rgba(176, 176, 176, 1);
     -moz-box-shadow: 1px 1px 4px 0px rgba(176, 176, 176, 1);
     /* background-color: #fff; */
@@ -142,4 +142,14 @@ body {
 .white-text {
     color: #000000;
     background-color: #6ab5ef;
+}
+
+@media only screen and (max-width:600px) {
+    .menu-icon {
+        display: block;
+    }
+
+    .nav-items {
+        display: none;
+    }
 }
