--- a/Landing Page/styles.css
+++ b/Landing Page/styles.css
@@ -1,3 +1,13 @@
+*,
+*::before,
+*::after {
+    margin: 0;
+    padding: 0;
+    scroll-behavior: smooth;
+    box-sizing: border-box;
+    /* background-color:black; */
+}
+
 body {
     font-family: 'Montserrat', sans-serif;
 }
