--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -295,15 +295,15 @@
 
 #cvbtn {
     background-color: transparent;
-    margin: 1.5rem;
-    font-weight: 500;
-    padding: 1rem 2rem;
-    border-radius: 10px;
+    margin: 1rem;
+    font-weight: 800;
+    padding: 1rem 1rem;
+    border-radius: 15px;
 }
 
 #cvbtn:hover {
     background-color: #099ce0;
-    color: white;
+    color: rgb(0, 0, 0);
 
 }
 
@@ -530,7 +530,8 @@ input[type="submit"]:hover {
 
 
 .extra {
-    color: #099ce0;
+    color: rgb(0, 102, 255);
+    font-weight: 900;
 }
 
 .center-main {
